<resources>
    <string name="app_name">Home Expense</string>
    <string name="splash_text">വീട്ടു ചെലവ് </string>

    <string name="title">OFF</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="no">Cancel</string>
    <string name="yes">Ok</string>
    <string name="extended_fab_content_desc">Enter Your Expense deatils here</string>
    <string name="extended_fab_label">Add New Log</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email"><a href="https://www.google.com/">google account</a></string>
    <string name="insta"><a href="https://www.instagram.com/">Profile</a></string>

    <string name="about_app">Simple Home expense Calculating app.
first you need to select a month and add your expense in the corresponding field, it will automatically calculate , and when you save it ,
        the data will be stored in your phone, so you can refer it any time.</string>
    <string name="about_app_secondpara">Lot of additionl features will be add in the feature update...</string>

    <string name="switcher">Change Theme</string>


    <!-- expense activity malayalam text-->
    <string name="milk">പാൽ </string>
    <string name="paper">പത്രം  </string>
    <string name="current">കറണ്ട് ബില്ല്</string>
    <string name="gas">ഗ്യാസ് </string>
    <string name="rise">അരി</string>
    <string name="veg">പച്ചക്കറി</string>
    <string name="other">പലവ്യഞ്ജനം</string>
    <string name="fish">മീൻ</string>
    <string name="meat">ഇറച്ചി</string>
    <string name="water">വാട്ടർ ബില്ല്</string>
    <string name="disel">ട്രാവൽ</string>
    <string name="chips">ചിപ്സ്/ഫുഡ്  </string>
    <string name="shopping">ഷോപ്പിംഗ്</string>
    <string name="mobile"> റീചാർജ്    </string>
    <string name="wifi">കേബിൾ/wifi  </string>
    <string name="medicine">മരുന്ന് </string>
    <string name="extra">എക്സ്ട്രാ </string>

    <string name="total">Total</string>
    <string name="action_settings">Settings</string>



 <!--Calculator -->
    <dimen name="button_height">75dp</dimen>
    <dimen name="textSize">25sp</dimen>
    <dimen name="buttonMargin">0.5dp</dimen>
    <dimen name="layout_height">70dp</dimen>


    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">x</string>
    <string name="division">/</string>
    <string name="dot">.</string>
    <string name="modulo">%</string>
    <string name="equal">=</string>
    <string name="delete">DEL</string>
    <string name="clear">C</string>
    <string name="RAD">RAD</string>
    <string name="DEG">DEG</string>

    <string name="parentheses_open">(</string>
    <string name="parentheses_close">)</string>
    <string name="root">"\u221A"</string>
    <string name="power">^</string>
    <string name="plus_or_minus">+/<Big>-</Big></string>
    <string name="square">X<sup><small>2</small></sup></string>
    <string name="factorial">!</string>
    <string name="inverse">1/X</string>
    <string name="e_constant">e</string>
    <string name="pi">"\u03A0"</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="sin">sin</string>
    <string name="sin_inverse">sin<sup><small>-1</small></sup></string>
    <string name="cos">cos</string>
    <string name="cos_inverse">cos<sup><small>-1</small></sup></string>
    <string name="tan">tan</string>
    <string name="tan_inverse">tan<sup><small>-1</small></sup></string>

</resources>